src/objects/GDP_Geo_Detail__c.object
<CustomObject>
    <description>Used to define and store geological locations (identified by location specific IDs and filtered out by sub continent) of GDP Agencies</description>
    <fields>
        <fullName>IATA_ISO_Country__c</fullName>
        <description>Related IATA ISO Country</description>
        <label>IATA ISO Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipName>IEC_Countries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sub_Continent__c</fullName>
        <description>Used to filter out Geo Details by sub continents</description>
        <label>Sub Continent</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_ID__c</fullName>
        <description>Used as location ID for GDP Agencies</description>
        <externalId>true</externalId>
        <inlineHelpText>Please enter the Country ISO Code this is used for external system mapping(External ID)</inlineHelpText>
        <label>System ID</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <label>GDP Geo Detail</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IATA_ISO_Country__c</columns>
        <columns>Sub_Continent__c</columns>
        <columns>System_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>GDP Geo Detail</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDP Geo Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>